--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,23 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+    
+    margin: 0;
+    padding: 0;
+    box-sizing:border-box;
+    font-family: "Karla", "Segoe UI", "Roboto",'Roboto Mono', monospace,
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+    scroll-behavior: smooth;
 }
+html {
+    background:rgb(105, 99, 99);
+}
+
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
 .axioscontainer {
   display: flex;
   background-color:rgb(0, 0, 0) ;
